--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div id="main">
         <div id="back">
             
-            <img src="./Images/2.JPG" alt="">
+             <img src="./Images/2.jpg" alt="">
             <img src="./Images/1.jpg" alt="" >
             <img src="./Images/3.JPG" alt="">
-            <img src="./Images/4.JPG" alt="">
+            <img src="./Images/4.png" alt="">
             <img src="./Images/7.JPG" alt="">
-            <img src="./Images/9.JPG" alt="">
-            <img src="./Images/10.JPG" alt="">
+            <img src="./Images/9.jpg" alt="">
+            <img src="./Images/10.jpg" alt="">
         </div>
         <div id="top"> 
             <div id="working-area">
