--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css"/>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <title>Rayban</title>
 </head>
 <body>
     <div id="main">
         <div id="back">
             
-             <img src="./Images/2.jpg" alt="">
+            <img src="./Images/2.jpg" alt="">
             <img src="./Images/1.jpg" alt="" >
             <img src="./Images/4.png" alt="">
             <img src="./Images/7.JPG" alt="">
@@ -24,7 +24,7 @@
                 <div id="nav-left"> 
                     <img src="./raybanlogo.png" alt="">
                     <a href="#">Products</a>
-                    <a href="#">About</a>
+                    <a href="./about.html">About</a>
                 </div>
                <div id="nav-right">
                <a href="#">Sunglasses</a>
@@ -52,13 +52,13 @@
             </div>
             </div>
         </div>
+      
     </div>
-   
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
-   <script  type="text/javascript"  src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
+ 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+<script  type="text/javascript"  src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
    <script src="./script.js"></script>
 </body>
 </html>
